recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: identifier expected but ')' found.
    droite(90.);
              ^FourSquare:10: error: identifier expected but ')' found.
    avance(100.);
               ^FourSquare:11: error: identifier expected but ')' found.
    gauche(90.);
              ^