recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  for (i<- 1 to 4){
    square()
    droite(90.);
  }
}

def square() {
  for (i<- 1 to 4){
    avance(100.);
    gauche(90.);
  }
  
}